--- a/module/raid/templates/admin.html
+++ b/module/raid/templates/admin.html
@@ -25,8 +25,8 @@
 		</select>
 		<input type="submit" value="Создать">
 		<input type="hidden" name="action" value="create_firm" />
-	</form>-->
-	<div style="clear:both;"></div></IF name="is_glist">
+	</form>--></IF name="is_glist">
+	<div style="clear:both;"></div>
 	<div style="padding:10px;"><IF name="is_glist">
 		<table style="width:100%;" class="tborder">
 			<tr align="center" class="tcat">
